--- a/src/Pages/NotFound/NotFound.css
+++ b/src/Pages/NotFound/NotFound.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 .page_404 {
     padding: 40px 0;
     background: #fff;
